--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.10.0",
     "nodemon": "^3.1.9",
+    "path": "^0.12.7",
     "pdfkit": "^0.16.0"
   }
 }
